# ai-infra-labs

./: .gitignore  MANIFEST.txt  README.md  VERIFICATION.md  requirements.txt
L0-foundations/ai-system-end-to-end-landscape/: gemm_profile.py
L0-foundations/data-pipeline-infrastructure-basics/: dataloader_throughput.py
L0-foundations/developer-prerequisites-baseline/: add.cpp  setup.py
L0-foundations/hands-on-environment-baseline/: Dockerfile.cpu  Dockerfile.gpu  hello_infra.py
L0-foundations/math-and-ml-foundations/: mlp_numpy.py  mlp_torch_autograd.py
L0-foundations/physical-bottlenecks-three-walls/: bandwidth_roofline.py
L1-compute-orchestration/ai-chip-vendor-comparison/: chip_compare.py
L1-compute-orchestration/ai-storage-architecture-gds-checkpoint/: ckpt_io_lab.py  snippet_4.py
L1-compute-orchestration/interconnect-topology-nvlink-ib-roce/: allreduce_gloo.py
L1-compute-orchestration/kubernetes-core-pods-services-ingress/: run_k8s_basics.sh
L1-compute-orchestration/linux-cgroups-numa-and-irq-affinity/: numa_dataloader_bench.py
L1-compute-orchestration/multi-region-hybrid-cloud-compute-network/: multi_region_dr_calc.py
L1-compute-orchestration/resource-scheduling-and-orchestration/: gang-job.yaml  kind-gpu.yaml  run_kind_gang.sh
L1-compute-orchestration/single-chip-microarchitecture/: tc_vs_cuda_gemm.py
L3-training/hardcore-compiler-llvm-mlir-practice/: CMakeLists.txt  CountAndDCEPass.cpp  demo.c  run_llvm_pass.sh
scripts/: build_llvm_triton_pin.sh  run_all_labs.py
tools/: extract_from_mdx.py  normalize_labs.py
(+56 files in other folders)
